# fastapi-postgresql-boilerplate

./: .db.env.example  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_db.py
.fleet/: run.json
app/: logging_conf.json  main.py  temp.json
app/api/: deps.py
app/api/dependencies/: auth.py  database.py  service.py  users.py
app/api/v1/: __init__.py  auth.py  users.py
app/core/: __init__.py  config.py  constant.py  events.py  token.py
app/core/settings/: app.py  base.py  dev.py  prod.py  test.py
app/crud/: base.py  user.py
app/database/: base.py  events.py  session.py
app/database/migraions/: env.py
app/database/migraions/versions/: b2437a6523e3_first.py
app/database/repositories/: base.py  users.py
app/models/: common.py  rwmodel.py  user.py
app/schemas/: __init__.py  message.py  token.py  user.py
app/services/: __init__.py  base.py  user.py  users.py
app/services/crud/: __init__.py  base.py  user.py
app/static/: swagger-ui-bundle.js  swagger-ui.css
app/static/public/test/: test.html  test2.html
app/tests/: conftest.py
app/tests/api/v1/: test_users.py
app/utils/: __init__.py  app_exceptions.py  custom_logging.py  request_exceptions.py  service_result.py
database/: init_db.sh  init_db.sql
tests/: conftest.py  test_app.py
tests/api/v1/: test_users.py
