[tool.poetry]
name = "fastapi-postgresql-boilerplate"
version = "0.2.0"
description = "FastAPI PostgreSQL Boilerplate"
license = "MIT"
authors = ["Jaeyong Shim <dev.beerjoa@gmail.com>"]
maintainers = ["Jaeyong Shim <dev.beerjoa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/beerjoa/fastapi-postgresql-boilerplate"
keywords = ["PostgreSQL", "FastAPI", "docker", "boilerplate", "docker-compose", "poetry"]
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
alembic = "^1.8.1"
uvicorn = "^0.16.0"
SQLAlchemy = "^1.4.44"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.5"
python-multipart = "^0.0.5"
requests = "^2.28.1"
python-dotenv = "^0.19.2"
loguru = "^0.6.0"
psycopg2 = "^2.9.5"
flake8 = "^6.0.0"
hypercorn = "^0.13.2"
black = "^22.10.0"
sqlacodegen = "^2.3.0"
asgi-correlation-id = "^2.0.0"
asyncpg = "^0.27.0"
greenlet = "^2.0.1"
httpx = "^0.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
pytest-cov = "^3.0.0"
asgi-lifespan = "^2.0.0"
pytest-asyncio = "^0.20.3"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.flake8]
ignore = ["E266"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
