[tool.poetry]
name = "fastapi-postgresql-boilerplate"
version = "0.3.0"
description = "FastAPI PostgreSQL Boilerplate"
license = "MIT"
authors = ["Jaeyong Shim <hello@beerjoa.dev>"]
maintainers = ["Jaeyong Shim <hello@beerjoa.dev>"]
readme = "README.md"
repository = "https://github.com/beerjoa/fastapi-postgresql-boilerplate"
keywords = ["PostgreSQL", "FastAPI", "docker", "boilerplate", "docker-compose", "poetry"]
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
alembic = "^1.13.1"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
psycopg2 = "^2.9.9"
hypercorn = "^0.16.0"
asgi-correlation-id = "^4.3.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
httpx = "^0.27.0"
python-jose = "^3.3.0"
sqlalchemy = "2.0.27"
sqlacodegen = "3.0.0rc5"
pydantic-settings = "^2.2.1"
passlib = {extras=["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.23.5.post1"
pytest-asyncio = "^0.20.3"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.black]
line-length = 200
target-version = ["py310"]
include = '\.pyi?$'

[tool.flake8]
ignore = ["E266"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
